# SnakeGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
.cache/clangd/index/: main.cpp.29B59B26A238E218.idx
